# ChangeLog for app-backup/holland-lib-common
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Jan 2011; <alunduil@gentoo.org> holland-lib-common-1.0.6.ebuild:
  Stabilizing holland-lib-common

*holland-lib-common-1.0.6 (12 Jan 2011)

  12 Jan 2011; <alunduil@gentoo.org> +holland-lib-common-1.0.6.ebuild:
  Adding holland 1.0.6

  03 Oct 2010; <alunduil@gentoo.org> holland-lib-common-1.0.4.ebuild,
  holland-lib-common-9999.ebuild:
  Fixed typo in LICENSE

  03 Oct 2010; <alunduil@gentoo.org> -holland-lib-common-1.0.2.ebuild,
  -holland-lib-common-1.0.2-r1.ebuild, holland-lib-common-1.0.4.ebuild,
  holland-lib-common-9999.ebuild:
  Changing license to GPLv2 per upstream

  03 Oct 2010; <alunduil@gentoo.org> -holland-lib-common-1.0.2.ebuild,
  -holland-lib-common-1.0.2-r1.ebuild:
  Removing version 1.0.2

  22 Aug 2010; <alunduil@gentoo.org> holland-lib-common-1.0.2.ebuild,
  holland-lib-common-1.0.2-r1.ebuild, holland-lib-common-1.0.4.ebuild,
  holland-lib-common-9999.ebuild:
  Adding initial holland ebuilds
