@@ -1,6 +1,9 @@
 # ChangeLog for app-backup/holland-lib-common
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Apr 2012; <alunduil@gentoo.org> holland-lib-common-9999.ebuild:
+  Updating to utilize the proper distutils classness.
 
   14 Jan 2011; <alunduil@gentoo.org> holland-lib-common-1.0.6.ebuild:
   Stabilizing holland-lib-common
